# fastapi-auth

./: Makefile  README.md  database.db  pyproject.toml
alembic/: env.py
alembic/versions/: 6d4640be0f82_init_db.py
app/: main.py
app/core/: settings.py
app/models/: database.py  engine.py
app/modules/auth/: router.py  service.py  utils.py
app/modules/post/: router.py
