[project]
name = "fastapi-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-jose[cryptography]>=3.5.0",
    "scalar-fastapi>=1.6.2",
    "sqlmodel>=0.0.33",
    "uvicorn>=0.40.0",
]
